--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "react-csr",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Avoid component server side rendered",
   "keywords": [
     "react",
     "reactjs",
     "no ssr",
     "csr",
-    "ssr"
+    "ssr",
+    "typescript",
+    "ts"
   ],
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -23,44 +26,27 @@
   "bugs": {
     "url": "https://github.com/ztytotoro/react-csr/issues"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "homepage": "https://github.com/ztytotoro/react-csr#readme",
   "devDependencies": {
-    "@pika/plugin-build-node": "^0.6.0",
-    "@pika/plugin-build-web": "^0.6.0",
-    "@pika/plugin-ts-standard-pkg": "^0.6.0",
     "@types/jest": "^24.0.18",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/typescript-estree": "^2.0.0",
-    "eslint": "^6.2.1",
-    "eslint-config-prettier": "^6.1.0",
+    "@types/react": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/typescript-estree": "^2.2.0",
+    "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
-  },
-  "@pika/pack": {
-    "pipeline": [
-      [
-        "@pika/plugin-ts-standard-pkg",
-        {
-          "exclude": [
-            "__tests__/**/*"
-          ]
-        }
-      ],
-      [
-        "@pika/plugin-build-node"
-      ],
-      [
-        "@pika/plugin-build-web"
-      ]
-    ]
+    "typescript": "^3.6.2"
   },
   "jest": {
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@types/react": "^16.9.2",
     "react": "^16.9.0"
   }
 }
