--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
-	"extends": "./tsconfig.base.json",
-	"compilerOptions": {
-		"jsx": "preserve"
-	}
+  "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    "target": "es5",
+    "jsx": "react",
+    "outDir": "dist",
+    "module": "commonjs"
+  },
+  "exclude": ["**/*.spec.tsx", "node_modules", "dist"]
 }
