--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
     "outDir": "dist",
     "module": "commonjs"
   },
-  "exclude": ["**/*.spec.tsx", "node_modules", "dist"]
+  "exclude": [
+    "**/*.spec.tsx",
+    "node_modules",
+    "dist"
+  ]
 }
